--- a/selection_sort_file_meta/CMakeLists.txt
+++ b/selection_sort_file_meta/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.0)
-set (CMAKE_CXX_STANDARD 20)
-add_compile_options(-Wall -Wextra)
 
-add_executable(main main.cpp sort_file.hpp my_sort.hpp)
+set(CMAKE_CXX_STANDARD 17)
+project(selection_sort_file)
+
+add_executable(main main.cpp)
